Revert "correct centre aligning"
This reverts commit c95f988158eb29ad3806f71c517ea1ad954b2194.

--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -100,7 +100,9 @@
     }
 }
 .top-banner-ad-container--article-layout .ad-slot--top-banner-ad {
-    text-align: center;
+    @include mq(mobile, rightCol) {
+        text-align: center;
+    }
 }
 
 /**
